gateway-yamls/gateway/with-wildcard-both-cases.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: Gateway
metadata:
  name: sad-kistpay-gateway
  namespace: default
spec:
  gatewayClassName: gke-l7-gxlb
  listeners:
  - name: https
    protocol: HTTPS
    port: 443
    tls:
      certificateRefs:
      - name: wildcard-cert
    routes:
      kind: HTTPRoute
      namespaces:
        from: All
